--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,9 @@
     }
   ],
   "options_page": "options.html",
+  "action": {
+    "default_popup": "popup.html"
+  },
   "background": {
     "service_worker": "background.js"
   }
