--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,7 @@
   "content_scripts": [
     {
       "matches": ["https://console.cloud.google.com/*"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
+      "js": ["defaults.js", "content.js"]
     }
   ],
   "options_page": "options.html",
