--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,11 @@
   "options_page": "options.html",
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["icon.svg"],
+      "matches": ["https://console.cloud.google.com/*"]
+    }
+  ]
 }
