--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,10 @@
   "host_permissions": [
     "https://console.cloud.google.com/*"
   ],
+  "optional_host_permissions": [
+    "https://*/*",
+    "http://*/*"
+  ],
   "permissions": [
     "storage"
   ],
