Show error badge on modal icon. Make it clickable.

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/icon.svg"],
+      "resources": ["icons/icon.svg", "icons/icon-badge-error.svg"],
       "matches": ["https://console.cloud.google.com/*"]
     }
   ]
